tests/NormalTests/paczka1/fuzzy1/97342463.err
Error in line 7: Idqx7 S767 16,8
Error in line 13: QdX S548 99,5
